update: update service for history, lecture and exercise