@@ -1,16 +1,16 @@
 package com.hcmus.mela.lecture.service;
 
+import com.hcmus.mela.common.utils.GeneralMessageAccessor;
 import com.hcmus.mela.lecture.dto.dto.TopicDto;
 import com.hcmus.mela.lecture.dto.response.GetTopicsResponse;
 import com.hcmus.mela.lecture.mapper.TopicMapper;
 import com.hcmus.mela.lecture.model.Topic;
 import com.hcmus.mela.lecture.repository.TopicRepository;
-import com.hcmus.mela.common.utils.GeneralMessageAccessor;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,30 +21,30 @@ public class TopicServiceImpl implements TopicService {
     private final GeneralMessageAccessor generalMessageAccessor;
 
     public GetTopicsResponse getTopicsResponse() {
-        GetTopicsResponse response = new GetTopicsResponse();
         List<Topic> topics = topicRepository.findAll();
 
         if (topics.isEmpty()) {
-            response.setMessage(generalMessageAccessor.getMessage(null, "get_topics_empty"));
-            response.setTotal(0);
-            response.setData(null);
-            return response;
+            return new GetTopicsResponse(
+                    generalMessageAccessor.getMessage(null, "get_topics_empty"),
+                    0,
+                    Collections.emptyList()
+            );
         }
 
-        response.setMessage(generalMessageAccessor.getMessage(null, "get_topics_success"));
-        response.setTotal(topics.size());
-        response.setData(topics.stream().map(TopicMapper.INSTANCE::topicToTopicDto).collect(Collectors.toList()));
-
-        return response;
+        return new GetTopicsResponse(
+                generalMessageAccessor.getMessage(null, "get_topics_success"),
+                topics.size(),
+                topics.stream()
+                        .map(TopicMapper.INSTANCE::topicToTopicDto)
+                        .toList()
+        );
     }
 
     @Override
-    public List<TopicDto> getTopics () {
+    public List<TopicDto> getTopics() {
         List<Topic> topics = topicRepository.findAll();
-        if (!topics.isEmpty()) {
-            return topics.stream().map(TopicMapper.INSTANCE::topicToTopicDto).toList();
-        } else {
-            return null;
-        }
+        return topics.isEmpty()
+                ? Collections.emptyList()
+                : topics.stream().map(TopicMapper.INSTANCE::topicToTopicDto).toList();
     }
 }
